Bug 579767 - Frame borders are sometimes not redrawn correctly after dragging them or resizing the window; r,a=roc